# cs184_as2

./: .gitignore  CMakeLists.txt  Makefile  README.md  parser.cpp  parserTemp.cpp
src/: .main.cpp.swp  main.cpp
src/color/: .color.h.swp  color.h
src/geometry/: transform.cpp  transform.h
src/gui/: .canvas.cpp.swp  canvas.cpp  canvas.h  sampler.cpp  sampler.h
src/io/: raytrace_args.cpp  raytrace_args.h
src/io/mesh/: mesh_io.cpp  mesh_io.h
src/scene/: camera.cpp  camera.h  element.h  light.h  parser.cpp  parser.h  phong_shader.cpp  phong_shader.h  scene.cpp  scene.h
src/shape/: aabb.cpp  aabb.h  ray.h  shape.h  sphere.h  triangle.h
src/tree/: aabb_node.cpp  aabb_node.h  aabb_tree.cpp  aabb_tree.h
